# baumdb

./: .gitignore  Cargo.toml  justfile
benches/: benchmark.rs
src/: bloom_filter.rs  db.rs  deserialization.rs  file_handler.rs  lib.rs  memtable.rs  serialization.rs
src/file_handling/: compaction.rs  file_bundle.rs  flushing.rs  mod.rs
tests/: integration.rs
