[package]
name = "baumdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1.28",  features = ["rt", "fs", "io-util", "macros", "rt-multi-thread", "time"]}
uuid = { version = "1.3.2", features = ["v4"] }
futures = "0.3"
tokio-stream = { version = "0.1.14", features = ["fs"] }
tokio-util = { version = "0.7.8", features = ["io"] }
bytes = "1.4.0"
