[package]
name = "baumdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1.28",  features = ["rt", "fs", "io-util", "macros", "rt-multi-thread", "time", "sync"]}
bytes = "1.4"
flate2 = "1.0"
byteorder = "1.4.3"

[dev-dependencies]
uuid = { version = "1.3.2", features = ["v4"] }
criterion = { version = "0.5", features = ["async_tokio"] }


[[bench]]
name = "benchmark"
harness = false
