[package]
name = "baumdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1.28",  features = ["rt", "fs", "io-util", "macros", "rt-multi-thread", "time", "sync"]}
bytes = "1.4"
flate2 = "1.0"
byteorder = "1.4.3"
itertools = "0.10"
uuid = { version = "1.4", features = ["v4"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
rand_chacha = "0.3.1"
rand = "0.8"


[[bench]]
name = "benchmark"
harness = false
